Fixed overflowing sponsor animation issues

--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ h2.title {
   font-weight: 800;
 }
 
-@media screen and (max-device-width: 768px) {
+@media only screen and (max-device-width: 768px) {
   h1 {
     font-size: 64px;
   }
@@ -383,6 +383,12 @@ h2.title {
   opacity: 1;
 }
 
+@media only screen and (max-width: 992px) {
+  #sponsors .sponsor-container {
+    max-width: 100vw;
+    box-sizing: border-box;
+  }
+}
 #footer {
   background-color: #16232e;
   color: #fff;
@@ -450,7 +456,7 @@ h2.title {
   font-size: 0.8em;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   footer#footer .absolute-bottom {
     display: none;
   }
