--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -81,7 +81,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   footer#footer {
     .absolute-bottom {
       display:none;
