--- a/scss/index.scss
+++ b/scss/index.scss
@@ -133,7 +133,7 @@ h2.title  {
 
 
 // === Font sizes for smaller screens ===
-@media screen and (max-device-width: 768px) {
+@media only screen and (max-device-width: 768px) {
   h1 {
     font-size:64px;
   }
