--- a/scss/sponsors.scss
+++ b/scss/sponsors.scss
@@ -43,3 +43,13 @@
     }
   }
 }
+
+@media only screen and (max-width: map_get($lg-map, breakpoint)) {
+  #sponsors {
+    .sponsor-container {
+      max-width:100vw;
+      box-sizing: border-box;
+
+    }
+  }
+}
